# JB_Work_21_01_13

./: 2020_손정빈_세금계산서_12월.xlsx  20210126105224_3.xls  20210126105224_3.xlsx  Untitled-1.py  basic.py  calc.py  excel_graph.py  excel_output_test.xlsx  folder.py  main.py  output.xlsx  pyproject.toml  python_crawling.py  test.xlsx  계산기.py  시가총액 Top 15.xlsx  정빈.xlsx  차트 추가하기 결과.xlsx
